# miniSoboka_auto_generator

./: CMakeLists.txt  README.md  Readme.txt  create_map.cpp  create_map.h  game.cpp  levels.h  main.cpp  records.h  solver.h
src/: game.h  icon_resource.rc  records.cpp  solver.cpp
tools/: check_levels.py  show_levels.py
